# Spectralis

./: .gitattributes  .gitignore  .placeholder  LICENSE  MANIFEST.json  README.md  Spectralis.sln  build.ps1  deploy.ps1  legal.html  setup.ps1  spectralis.nuspec
.config/: dotnet-tools.json
.github/workflows/: build.yml
Assets/audio/: quick_script.py  reveal.lrc  song_analysis.json
Spectralis/: AppSettings.cs  Form1.Designer.cs  Form1.cs  Program.cs  Spectralis.csproj  app.config  app.manifest  packages.config
Spectralis.App/: App.axaml  App.axaml.cs  Program.cs  Spectralis.App.csproj  ViewLocator.cs  app.manifest
Spectralis.App/Behaviors/: DragDropBehavior.cs
Spectralis.App/Controls/: AlbumWorldHost.axaml  AlbumWorldHost.axaml.cs  AvaloniaVizCanvas.cs  BeatGridOverlay.cs  BeatGridOverlayControl.axaml  BeatGridView.axaml  (+50 more)
Spectralis.Core/: Spectralis.Core.csproj
Spectralis.Installer/: README.md
Spectralis.Tests/: Spectralis.Tests.csproj
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
docs/: README.md  api-contract.md  architecture.md  blockers.md  cdn-contract.md  creator-tools.md  feature-gap.md  guidelines.md  legacy-winforms.md  song-wars-implementation-plan.md  standards.md
extension/: README.md  background.js  contentScript.js  manifest.json  popup.css  popup.html  popup.js
frontend/: index.html
legacy/: ExternalOpenIpc.cs  Spectralis.csproj  SpectralisLog.cs  build.ps1  setup.ps1
releases-velopack/: releases.win-x64.json
web-share/: index.html  player.js  sq.html  sq.js  styles.css  submit.html  submit.js
(+969 files in other folders)
