[package]
name = "spectralis-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["fs", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4"] }
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
